@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2025-06-25T01:44:59Z",
-  "count" : 22,
-  "count_minmax" : [ 22, 22 ],
-  "count_decinc" : [ -0, +22 ],
+  "timestamp" : "2025-06-26T01:43:46Z",
+  "count" : 120,
+  "count_minmax" : [ 22, 120 ],
+  "count_decinc" : [ -0, +120 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
