@@ -1,15 +1,10 @@
 {
-  "count": 1654,
+  "count": 1652,
   "uniques": 7,
   "clones": [
     {
-      "timestamp": "2025-06-11T00:00:00Z",
-      "count": 52,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-06-12T00:00:00Z",
-      "count": 120,
+      "count": 52,
       "uniques": 1
     },
     {
@@ -74,8 +69,13 @@
     },
     {
       "timestamp": "2025-06-25T00:00:00Z",
-      "count": 22,
+      "count": 120,
       "uniques": 2
+    },
+    {
+      "timestamp": "2025-06-26T00:00:00Z",
+      "count": 20,
+      "uniques": 1
     }
   ]
 }
